--- a/public/index.html
+++ b/public/index.html
@@ -4,29 +4,41 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
-        <title>orange on the table</title>
-        <meta name="description" content="Everything I like to make on my free time goes here.">
+        <title>sysarmy.hk</title>
+        <meta name="description" content="IT Community. Support for those who give support, Hong Kong Chapter">
         <meta property="og:title" content="orange on the table" />
-        <meta property="og:url" content="https://www.oott.hk/" />
-        <meta property="og:description" content="Everything I like to make on my free time goes here.">
-        <meta property="og:image" content="//www.oott.hk/orange-on-the-table.jpg">
+        <meta property="og:url" content="https://www.sysarmy.hk/" />
+        <meta property="og:description" content="IT Community. Support for those who give support, Hong Kong Chapter">
+        <meta property="og:image" content="//www.sysarmy.hk/logo.png">
 
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-        <meta name="msapplication-TileColor" content="#da532c">
+        <link rel="manifest" href="/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-LJS7Z5X0GC"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-L9CZMZC7GK"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'G-LJS7Z5X0GC');
+
+            gtag('config', 'G-L9CZMZC7GK');
         </script>
+
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet"> 
         <style>
@@ -36,7 +48,7 @@
             }
             body {
                 min-height: 100%;
-                background-color: #DDDDDD;
+                background-color: black;
                 text-align: center;
             }
     
@@ -79,14 +91,14 @@
         </style>
     </head>
         <body>
-            <!-- <div class="logo-hero">
-                <img class="logo" src="orange-on-the-table.jpg" alt="orange on the table logo" />
-                <div>
+            <div class="logo-hero">
+                <img class="logo" src="logo.png" alt="sysarmy logo" />
+                <!-- <div>
                     <a href="https://instagram.com/orangeontable/" target="_blank" ><img src="./social-media/instagram.svg" alt="Instagram" title="Instagram" class="social-media-logo" /></a>
                     <a href="https://twitter.com/orangeontable/" target="_blank"><img src="./social-media/twitter.svg" alt="Twitter" title="Twitter" class="social-media-logo" /></a>
                     <a href="https://www.facebook.com/orangeonthetable" target="_blank"><img src="./social-media/facebook.svg" alt="Facebook Page" title="Facebook Page" class="social-media-logo" /></a>
                     <a href="https://www.youtube.com/channel/UCfSDjaWobx8DU7qolgAl3QA" target="_blank"><img src="./social-media/youtube.svg" alt="YouTube Channel" title="YouTube Channel" class="social-media-logo" /></a>
-                </div>
-            </div> -->
+                </div> -->
+            </div>
         </body>
 </html>
